# alphaprobe

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: publish.yml
src/alphaminer/: __init__.py  _engine.py  _parser.py  _plot.py  _shared.py  _types.py
src/alphaminer/aggregations/: __init__.py  _base.py  _basic_rolling.py  _complexity.py  _correlation_agg.py  _ema_family.py  _entropy.py  _fractional.py  _momentum.py  _moving_average.py  _moving_corr.py  _rank_norm.py  _raw.py  _regression.py  _technical.py
src/alphaminer/correlations/: __init__.py  _base.py  _chatterjee.py  _pearson.py  _spearman.py
src/alphaprobe/: __init__.py  _engine.py  _parser.py  _plot.py  _types.py
src/alphaprobe/aggregations/: __init__.py  _basic_rolling.py  _complexity.py  _correlation_agg.py  _ema_family.py  _entropy.py  _fractional.py  _momentum.py  _moving_average.py  _moving_corr.py  _rank_norm.py  _raw.py  _regression.py  _technical.py
src/alphaprobe/correlations/: __init__.py  _chatterjee.py  _pearson.py  _spearman.py
src/alpharadar/: __init__.py  _engine.py  _parser.py  _plot.py  _shared.py  _types.py
src/alpharadar/aggregations/: __init__.py  _basic_rolling.py  _complexity.py  _correlation_agg.py  _ema_family.py  _entropy.py  _fractional.py  _momentum.py  _moving_average.py  _moving_corr.py  _rank_norm.py  _raw.py  _regression.py  _technical.py
src/alpharadar/correlations/: __init__.py  _chatterjee.py  _pearson.py  _spearman.py
src/alphascope/: __init__.py  _engine.py  _parser.py  _plot.py  _types.py
src/alphascope/aggregations/: __init__.py  _basic_rolling.py  _complexity.py  _correlation_agg.py  _ema_family.py  (+9 more)
tests/: conftest.py  test_aggregations.py  test_correlations.py  test_explore.py
(+4 files in other folders)
