[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphaminer"
version = "0.1.0"
description = "Visualize lag-correlations between target and aggregated features for low S/N time-series data"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.5",
    "scipy>=1.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/alphaminer"]
