[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpharadar"
version = "0.1.1"
description = "Visualize lag-correlations between target and aggregated features for low S/N time-series data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "saikyo219", email = "k.higuchi.219@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.5",
    "scipy>=1.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/kyo219/alpharadar"
Repository = "https://github.com/kyo219/alpharadar"

[tool.hatch.build.targets.wheel]
packages = ["src/alpharadar"]
